Fixed lists on mobile devices

--- a/assets/css/responsive/main.css
+++ b/assets/css/responsive/main.css
@@ -13,8 +13,8 @@
         text-align: center;
         margin: 7% 0;
     }
-    ul{
-        list-style-type: none;
+    ul, ol{
+        padding-left: 4%;
     }
 }
 
